tests/baselines/reference/subtypingWithCallSignaturesA.errors.txt
==== tests/cases/compiler/subtypingWithCallSignaturesA.ts (2 errors) ====
    declare function foo3(cb: (x: number) => number): typeof cb;
    var r5 = foo3((x: number) => ''); // error
             ~~~~
!!! subtypingWithCallSignaturesA.ts(2,10): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '(x: number) => string' and '(x: number) => number' are incompatible.
             ~~~~
!!! subtypingWithCallSignaturesA.ts(2,10): error TS2087: Could not select overload for 'call' expression.